<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/user_item_select">

    <!-- List View: Row Item Attributes -->

    <!-- View Assignment Title Text View + Attributes -->

    <ImageView
        android:id="@+id/changeItemImage"
        android:contentDescription="@string/SettingsButton"
        android:src="@drawable/changedata"

        android:layout_width="32dip"
        android:layout_height="32dip"
        android:layout_margin="10dp"

        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center" />

    <!-- Assignment Title: -->
    <TextView
        android:id="@+id/rowTitle"
        android:text="@string/rowTitleString"
        android:typeface="sans"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:maxLines="2"
        android:ellipsize="marquee"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingBottom="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Assignment Title from SQLite DB | Text View + Attributes-->
    <TextView
        android:id="@+id/textViewItemTitle"
        android:text="@string/placeholder"
        android:typeface="sans"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:maxLines="2"
        android:ellipsize="marquee"

        android:layout_toRightOf="@+id/rowTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingBottom="2dip"
        android:layout_marginLeft="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Subject Name: -->
    <TextView
        android:id="@+id/rowSubject"
        android:text="@string/rowSubjectString"
        android:typeface="sans"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:maxLines="2"
        android:ellipsize="marquee"

        android:layout_below="@+id/rowTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingBottom="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <!-- Subject Name from SQlite DB | Text View + Attributes -->
    <TextView
        android:id="@+id/textViewItemSubject"
        android:text="@string/placeholder"
        android:typeface="sans"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/rowSubject"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingBottom="2dip"
        android:layout_below="@+id/textViewItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Total Marks: -->
    <TextView
        android:id="@+id/rowMarks"
        android:text="@string/rowMarksString"
        android:typeface="sans"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:maxLines="2"
        android:ellipsize="marquee"

        android:layout_below="@+id/rowSubject"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingBottom="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Total Marks from SQlite DB | Text View + Attributes -->
    <TextView
        android:id="@+id/textViewItemMarks"
        android:text="@string/placeholder"
        android:typeface="sans"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/rowMarks"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewItemSubject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!-- Due Date -->
    <TextView
        android:id="@+id/rowDate"
        android:text="@string/rowDateString"
        android:typeface="sans"
        android:textStyle="bold"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:maxLines="2"
        android:ellipsize="marquee"

        android:layout_below="@+id/rowMarks"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:paddingBottom="2dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--Due Date from SQlite DB | Text View + Attributes -->
    <TextView
        android:id="@+id/textViewItemDate"
        android:text="@string/placeholder"
        android:typeface="sans"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium"

        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/rowDate"

        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textViewItemMarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />




</RelativeLayout>